The engine answers hello and status from each connection's own platform thread and writes a client's lines through one queue and one writer thread per stream — a plan's workers hand their events over without waiting for any socket, the coalescer emits outside its state lock, a remote cancel queues its terminal before the runner hears of it, and a walk on a virtual thread yields its carrier every 256 entries — and a client that stops reading is dropped once 8 MiB of lines or the stream-idle bound wait for it, so one suspended terminal cannot wedge the engine